--- a/src/com/itmill/toolkit/terminal/gwt/public/component-themes/collection.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/component-themes/collection.css
@@ -10,4 +10,5 @@
 @import "caption/css/caption.css";
 @import "tree/css/tree.css";
 @import "splitpanel/css/splitpanel.css";
+@import "filterselect/css/filterselect.css";
 
