Widgetset extension changes, reservr example
svn changeset:2312 branch:trunk

--- a/src/com/itmill/toolkit/terminal/gwt/public/component-themes/collection.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/component-themes/collection.css
@@ -1,4 +1,5 @@
 @import "common/css/common.css";
+@import "button/css/button.css";
 @import "textfield/css/textfield.css";
 @import "select/css/select.css";
 @import "panel/css/panel.css";
