-New ITabsheet implementation using GWT TabBar and own custom DeckPanel (ITabsheetPanel). -New theme (candidate 0.3) implementation started. -CSS classname conventions forced on several client side components.
svn changeset:2371 branch:trunk

--- a/src/com/itmill/toolkit/terminal/gwt/public/default/styles.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/styles.css
@@ -1,15 +1,15 @@
-@import "common/css/common.css";
-@import "button/css/button.css";
-@import "textfield/css/textfield.css";
-@import "select/css/select.css";
-@import "panel/css/panel.css";
-@import "tabsheet/css/tabsheet.css";
-@import "datefield/css/datefield.css";
-@import "table/css/table.css";
-@import "slider/css/slider.css";
-@import "window/css/window.css";
-@import "caption/css/caption.css";
-@import "tree/css/tree.css";
-@import "splitpanel/css/splitpanel.css";
-@import "filterselect/css/filterselect.css";
+@import "common/common.css";
+@import "button/button.css";
+@import "textfield/textfield.css";
+@import "select/select.css";
+@import "panel/panel.css";
+@import "tabsheet/tabsheet.css";
+@import "datefield/datefield.css";
+@import "table/table.css";
+@import "slider/slider.css";
+@import "window/window.css";
+@import "caption/caption.css";
+@import "tree/tree.css";
+@import "splitpanel/splitpanel.css";
+@import "select/filterselect.css";
 
