Streaming upload and client side implementation for upload + progressindicator
svn changeset:2381 branch:trunk

--- a/src/com/itmill/toolkit/terminal/gwt/public/default/styles.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/styles.css
@@ -12,4 +12,5 @@
 @import "tree/tree.css";
 @import "splitpanel/splitpanel.css";
 @import "select/filterselect.css";
+@import "progressindicator/progressindicator.css";
 
