--- a/src/com/itmill/toolkit/terminal/gwt/public/default/window/window.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/window/window.css
@@ -7,6 +7,7 @@
 	background: yellow;
 	height:20px;
 	overflow: hidden;
+	white-space: nowrap;
 }
 
 .i-window-footer {
@@ -15,7 +16,6 @@
 }
 
 .i-window-contents {
-	overflow:auto;
 	background: #fff;
 }
 
