ContainerResizedListener, ISplitPanel refactoring, ExpandLayout and test
svn changeset:2441 branch:trunk

--- a/src/com/itmill/toolkit/terminal/gwt/public/default/styles.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/styles.css
@@ -13,4 +13,4 @@
 @import "splitpanel/splitpanel.css";
 @import "select/filterselect.css";
 @import "progressindicator/progressindicator.css";
-
+@import "expandlayout/expandlayout.css";
