--- a/src/com/itmill/toolkit/terminal/gwt/public/default/common/common.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/common/common.css
@@ -1,9 +1,20 @@
+html, body {
+	margin:0;
+	padding:0;
+	height:100%;	
+}
+
 #itmtk-ajax-window {
 	background: #e9eced;
 	font-family: "Trebuchet MS", geneva, helvetica, arial, tahoma, verdana, sans-serif;
 	color: #464f52;
 	font-size: 12px;
 	line-height: 18px;
+	height:100%;	
+}
+
+.i-view {
+	height:100%;	
 }
 
 input, select, textarea, button {
