Panel size calculations need deco-element to be rendered, so display:none replaced with height:0 + overflow:hidden.
svn changeset:2451 branch:trunk

--- a/src/com/itmill/toolkit/terminal/gwt/public/default/panel/panel.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/panel/panel.css
@@ -98,7 +98,9 @@
 }
 
 .i-panel-light .i-panel-deco {
-	display: none;
+	/*display: none;*/
+	height: 0;
+	overflow: hidden;
 }
 
 .i-panel-light .i-panel-deco:before {
