--- a/src/com/itmill/toolkit/terminal/gwt/public/default/tabsheet/tabsheet.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/tabsheet/tabsheet.css
@@ -67,7 +67,7 @@
 	border-bottom: none;
 	background-color: #fff;
 	overflow: auto;
-	padding: 15px 18px 6px 18px;
+	/*padding: 15px 18px 6px 18px;*/
 }
 
 .i-tabsheet-deco {
