--- a/src/com/itmill/toolkit/terminal/gwt/public/default/table/table.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/table/table.css
@@ -167,5 +167,5 @@
 /* IE specific styles */
 * html .i-table-scrollposition {
 	background: transparent;
-	filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src="../ITK-INF/widgetsets/com.itmill.toolkit.terminal.gwt.DefaultWidgetSet/default/table/img/scroll-position-bg.png", sizingMethod="scale");
+	filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src="../ITMILL/widgetsets/com.itmill.toolkit.terminal.gwt.DefaultWidgetSet/default/table/img/scroll-position-bg.png", sizingMethod="scale");
 }
