--- a/src/com/itmill/toolkit/demo/reservation/gwt/public/reservr/styles.css
+++ b/src/com/itmill/toolkit/demo/reservation/gwt/public/reservr/styles.css
@@ -1,1 +1,90 @@
 @import "googlemap/css/googlemap.css";
+
+.i-datefield-entrycalendar-01 {
+	background-color: red;
+}
+.i-datefield-entrycalendar-02 {
+	background-color: red;
+}
+.i-datefield-entrycalendar-03 {
+	background-color: red;
+}
+.i-datefield-entrycalendar-04 {
+	background-color: red;
+}
+.i-datefield-entrycalendar-05 {
+	background-color: red;
+}
+.i-datefield-entrycalendar-06 {
+	background-color: red;
+}
+.i-datefield-entrycalendar-07 {
+	background-color: red;
+}
+.i-datefield-entrycalendar-08 {
+	background-color: red;
+}
+.i-datefield-entrycalendar-09 {
+	background-color: red;
+}
+.i-datefield-entrycalendar-10 {
+	background-color: red;
+}
+.i-datefield-entrycalendar-11 {
+	background-color: red;
+}
+.i-datefield-entrycalendar-12 {
+	background-color: red;
+}
+.i-datefield-entrycalendar-13 {
+	background-color: red;
+}
+.i-datefield-entrycalendar-14 {
+	background-color: red;
+}
+.i-datefield-entrycalendar-15 {
+	background-color: red;
+}
+.i-datefield-entrycalendar-16 {
+	background-color: red;
+}
+.i-datefield-entrycalendar-17 {
+	background-color: red;
+}
+.i-datefield-entrycalendar-18 {
+	background-color: red;
+}
+.i-datefield-entrycalendar-19 {
+	background-color: red;
+}
+.i-datefield-entrycalendar-20 {
+	background-color: red;
+}
+.i-datefield-entrycalendar-21 {
+	background-color: red;
+}
+.i-datefield-entrycalendar-22 {
+	background-color: red;
+}
+.i-datefield-entrycalendar-23 {
+	background-color: red;
+}
+.i-datefield-entrycalendar-24 {
+	background-color: red;
+}
+.i-datefield-entrycalendar-25 {
+	background-color: red;
+}
+.i-datefield-entrycalendar-26 {
+	background-color: red;
+}
+.i-datefield-entrycalendar-27 {
+	background-color: red;
+}
+.i-datefield-entrycalendar-28 {
+	background-color: red;
+}
+.i-datefield-entrycalendar-29 {
+	background-color: red;
+}
+
