selector typo fix (icontextmenu, table)
svn changeset:2470 branch:trunk

--- a/src/com/itmill/toolkit/terminal/gwt/public/default/common/common.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/common/common.css
@@ -75,7 +75,7 @@ select {
 	border: 1px solid #b6bbbc;
 }
 
-.i-contextmenu, table {
+.i-contextmenu table {
 	border-collapse:collapse;
 	margin:0;
 	padding:0;
