-Style name convetion changes to IPanel (no longer multiple classname like ".i-panel .i-panel-light", just ".i-panel-light" and ".i-panel-light-caption"). -FilterSelect prev and next button structure changed (now has one extra SPAN element for styling). -Initial tree styling done.
svn changeset:2472 branch:trunk

--- a/src/com/itmill/toolkit/terminal/gwt/public/default/tree/tree.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/tree/tree.css
@@ -1,6 +1,27 @@
-.i-tree-node-selected > table > tbody > tr > td > span.gwt-TreeItem {
-	background: #ff0;
-}
-span.gwt-TreeItem {
+.i-tree .gwt-TreeItem {
 	cursor: pointer;
+}
+
+.i-tree-node-selected > table > tbody > tr > td > .gwt-TreeItem {
+	background: #5daee8;
+	color: #fff;
+	display: block;
+	padding: 1px;
+	margin: -1px -1px;
+}
+.i-tree-node-selected > table > tbody > tr > td > .gwt-TreeItem:before {
+	display: block;
+	float: left;
+	content: url(../common/img/blank.gif);
+	width: 1px;
+	background: #5daee8;
+	margin: 0 1px 0 -2px;
+}
+.i-tree-node-selected > table > tbody > tr > td > .gwt-TreeItem:after {
+	display: block;
+	float: right;
+	content: url(../common/img/blank.gif);
+	width: 1px;
+	background: #5daee8;
+	margin: 0 -2px 0 1px;
 }
