--- a/src/com/itmill/toolkit/terminal/gwt/public/default/panel/panel.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/panel/panel.css
@@ -1,7 +1,11 @@
 .i-panel,
 .i-panel-caption,
 .i-panel-content,
-.i-panel-deco {
+.i-panel-deco,
+.i-panel-light,
+.i-panel-light-caption,
+.i-panel-light-content,
+.i-panel-light-deco {
 	outline: none; /* Prevent selection outline which might break layouts or cause scrollbars */
 }
 
@@ -13,7 +17,8 @@
 	margin-left: 9px;
 }
 
-.i-panel-caption {
+.i-panel-caption,
+.i-panel-light-caption {
 	font-size: 18px;
 	line-height: 18px;
 	font-weight: normal;
@@ -77,34 +82,21 @@
 
 /* Light panel style */
 
-.i-panel-light:before {
-	display: none;
-}
-
-.i-panel-light .i-panel-caption {
+.i-panel-light-caption {
 	border-left: none;
 	border-right: none;
 	background: transparent;
+	padding-top: 14px;
 }
 
-.i-panel-light .i-panel-caption:before,
-.i-panel-light .i-panel-nocaption:before {
-	display: none;
-}
-
-.i-panel-light .i-panel-content {
+.i-panel-light-content {
 	border: none;
 	background: transparent;
 }
 
-.i-panel-light .i-panel-deco {
-	/*display: none;*/
+.i-panel-light-deco {
 	height: 0;
 	overflow: hidden;
-}
-
-.i-panel-light .i-panel-deco:before {
-	display: none;
 }
 
 
@@ -113,18 +105,11 @@
 /* Light panel contained within another panel or a tabsheet */
 /* Use more precise selector to override IE specific rules automatically */
 
-.i-panel .i-panel-light .i-panel-caption,
-.i-tabsheet .i-panel-light .i-panel-caption {
-	border-left: none;
-	border-right: none;
-	/*margin: -16px -18px 0 -18px;*/
+.i-panel .i-panel-light-caption,
+.i-tabsheet .i-panel-light-caption {
 	margin-top: -1px;
 	padding-top: 14px;
 	border-top: 1px solid #babfc0;
-}
-.i-panel .i-panel-light .i-panel-content,
-.i-tabsheet .i-panel-light .i-panel-content {
-	/*margin: 0 -18px 16px -18px;*/
 }
 
 
@@ -146,11 +131,11 @@
 
 * html .i-panel-content {
 	border-bottom: 1px solid #babfc0;
-	padding: 15px 18px;
+	/*padding: 15px 18px;*/
 }
 *+html .i-panel-content {
 	border-bottom: 1px solid #babfc0;
-	padding: 15px 18px;
+	/*padding: 15px 18px;*/
 }
 
 * html .i-panel-deco {
